--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,5 +8,19 @@
 body{
     font-family: Montserrat, sans-serif;
     font-weight: 400;
-    background-color: aquamarine;
+    color: #445f6b;
+}
+/* headings and logo */
+
+h1, h2{
+    font-family: Montserrat, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    color: #354e59;
+}
+#logo{
+    display: flex;
+    justify-content: flex-start;
+    padding-left: 20px;
+    font-size: 250%;
 }
