--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,8 +19,35 @@ h1, h2{
     color: #354e59;
 }
 #logo{
-    display: flex;
-    justify-content: flex-start;
-    padding-left: 20px;
+    
     font-size: 250%;
+    padding-left: 20px;
+}
+.navbar{
+    background-color: #f7eeb7;
+    display: flex; 
+    align-items: center; 
+    
+    
+}
+.navbar li{
+    display: inline-flex;
+    padding: 20px 10px;
+    font-size: 150%; 
+    list-style: none;
+    color: #354e59;
+}
+.navbar ul{
+    margin-left: auto;
+    padding: 0 20px;
+}
+.navbar a{
+    text-decoration: none; 
+}
+.menu a:hover{
+    color: #354e59;
+    border-bottom: 1px solid #354e59;
+}
+.active{
+    border-bottom: 1px solid #354e59;
 }
