--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,7 @@ h1, h2{
     font-size: 150%; 
     list-style: none;
     color: #354e59;
+    text-decoration: none;
 }
 .navbar ul{
     margin-left: auto;
@@ -50,4 +51,30 @@ h1, h2{
 }
 .active{
     border-bottom: 1px solid #354e59;
+}
+
+/* hero image */
+#hero-outer{
+    height: 600px;
+    width: 100%;
+    overflow: hidden;   
+}
+#hero-image{
+    height: 600px;
+    width: 100%;
+    background: url(../images/hero-image.jpg) no-repeat center center;
+
+    /*animates zoom on loading page*/
+    animation-name: hero-zoom;
+    animation-duration: 5s;
+    animation-fill-mode: forwards;
+}
+/* zoom animation hero image*/
+@keyframes hero-zoom{
+from{
+        transform: scale(1);
+}
+to{
+    transform: scale(1.1);
+}
 }
