--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,16 +19,20 @@ h1, h2{
     color: #354e59;
 }
 #logo{
-    
     font-size: 250%;
     padding-left: 20px;
+}
+#logo i{
+    padding: 10px;
 }
 .navbar{
     background-color: #f7eeb7;
     display: flex; 
-    align-items: center; 
-    
-    
+    align-items: center;     
+}
+.navbar ul{
+    margin-left: auto;
+    padding: 0 20px;
 }
 .navbar li{
     display: inline-flex;
@@ -38,12 +42,12 @@ h1, h2{
     color: #354e59;
     text-decoration: none;
 }
-.navbar ul{
-    margin-left: auto;
-    padding: 0 20px;
+.navbar i{
+    padding-left: 10px;
 }
 .navbar a{
     text-decoration: none; 
+    color: inherit;
 }
 .menu a:hover{
     color: #354e59;
