Style nav bar forscreens 950px and down

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,3 +218,10 @@ footer{
         font-size: 80% !important;
      }
  }
+
+ /* for medium screen size from 950px and down */
+ @media screen and (max-width: 950px) {
+     .navbar{
+         display: block;
+     }
+ } 
