--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -237,10 +237,70 @@ footer {
 #form-section{
     display: flex;
     align-items: center;
-    background: lightcoral;
-
+    background: #cae8de;
 }
 
+.form-box {
+    width:95%;
+    margin:50px auto;
+    max-width: 500px;
+}
+
+.form-box h2 {
+    text-align: center;
+    margin-bottom:10px;
+}
+
+.booking-form {
+    border: 2px solid #354e59;
+    border-radius:5px;
+    padding:30px;
+}
+
+.form-input {
+    display:flex;
+    justify-content: center;
+    flex-direction: row;
+    margin-bottom:20px;
+}
+
+.form-input label {
+    padding-right:20px;
+    width:40%;
+    line-height: 45px;
+    font-weight: bold;
+}
+
+.form-input input {
+    border: 1px solid #354e59;
+    border-radius: 5px;
+    width: 60%;
+    padding:15px;
+}
+
+.form-submit {
+    width: 100%;
+}
+
+.form-submit input {
+    background:#f7eeb7;
+    border: 1px solid #354e59;
+    border-radius: 5px;
+    font-size:120%;
+    width: 100%;
+    padding:15px;
+}
+
+#thankyou {
+    display: flex;
+    background: #cae8de;
+}
+
+.thankyou-message {
+    width:80%;
+    text-align: center;
+    margin:25% auto;
+}
 /* media querys */
 
 /* for large to medium screens size from 1200px and down */
